<resources>
    <string name="app_name">FirebaseAuthDemo</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="password">password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="register">REGISTER</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="you_are_logged_successfully">You are logged successfully</string>
    <string name="user_id">user Id</string>
    <string name="forget_password">Forget Password</string>
    <string name="forgot_password_screen">FORGOT PASSWORD SCREEN</string>
    <string name="reset_text">ENTER YOUR USERNAME OR EMAIL ADDRESS, WILL SEND YOU AN EMAIL TO RESET YOUR PASSWORD</string>
    <string name="submit">Submit</string>
</resources>