<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

   <com.google.android.material.textfield.TextInputLayout
       style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginStart="16dp"
       android:layout_marginEnd="16dp"
       android:layout_marginTop="150dp"
       android:id="@+id/ll_email"
       android:inputType="text"
       tools:ignore="MissingConstraints" >

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/et_email"
           android:hint="@string/email"
           android:inputType="text"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:importantForAutofill="yes" />
   </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_email"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:id="@+id/ll_password"
        android:inputType="text"
        tools:ignore="MissingConstraints" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:hint="@string/password"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="yes" />

   </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="@+id/ll_password"
        app:layout_constraintTop_toBottomOf="@+id/ll_password"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_forget_password"
        android:layout_marginTop="20dp"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:layout_marginTop="20dp"
        android:text="@string/don_t_have_an_account_register"
        android:gravity="center"/>

</androidx.constraintlayout.widget.ConstraintLayout>